java_parser/SimpleJavaParser.py
# Generated from SimpleJava.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SimpleJavaParser ( Parser ):

    grammarFileName = "SimpleJava.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'extends'", "'try'", "'finally'", "'catch'", 
                     "'->'", "'import'", "'package'", "'class'", "'interface'", 
                     "'implements'", "'public'", "'enum'", "'private'", 
                     "'protected'", "'static'", "'final'", "'abstract'", 
                     "'synchronized'", "'native'", "'strictfp'", "'void'", 
                     "'boolean'", "'char'", "'byte'", "'short'", "'int'", 
                     "'long'", "'float'", "'double'", "'if'", "'else'", 
                     "'while'", "'for'", "'return'", "'true'", "'false'", 
                     "'null'", "'switch'", "'case'", "'default'", "'break'", 
                     "'continue'", "'do'", "'throw'", "'throws'", "'assert'", 
                     "'new'", "'instanceof'", "'this'", "'super'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", "'<'", 
                     "'>'", "'<='", "'>='", "'='", "'.'", "'&&'", "'||'", 
                     "'++'", "'--'", "'&'", "'|'", "'^'", "'~'", "'!'", 
                     "'+='", "'-='", "'*='", "'/='", "'%='", "'&='", "'|='", 
                     "'^='", "'<<='", "'>>='", "'>>>='", "'{'", "'}'", "'('", 
                     "')'", "'['", "']'", "','", "';'", "'?'", "':'", "'...'", 
                     "'@'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "IMPORT", "PACKAGE", "CLASS", 
                      "INTERFACE", "IMPLEMENTS", "PUBLIC", "ENUM", "PRIVATE", 
                      "PROTECTED", "STATIC", "FINAL", "ABSTRACT", "SYNCHRONIZED", 
                      "NATIVE", "STRICTFP", "VOID", "BOOLEAN", "CHAR", "BYTE", 
                      "SHORT", "INT", "LONG", "FLOAT", "DOUBLE", "IF", "ELSE", 
                      "WHILE", "FOR", "RETURN", "TRUE", "FALSE", "NULL", 
                      "SWITCH", "CASE", "DEFAULT", "BREAK", "CONTINUE", 
                      "DO", "THROW", "THROWS", "ASSERT", "NEW", "INSTANCEOF", 
                      "THIS", "SUPER", "PLUS", "MINUS", "MULT", "DIV", "MOD", 
                      "EQUAL", "NOTEQUAL", "LT", "GT", "LE", "GE", "ASSIGN", 
                      "DOT", "AND", "OR", "INC", "DEC", "BITAND", "BITOR", 
                      "CARET", "TILDE", "BANG", "ADD_ASSIGN", "SUB_ASSIGN", 
                      "MUL_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "AND_ASSIGN", 
                      "OR_ASSIGN", "XOR_ASSIGN", "LSHIFT_ASSIGN", "RSHIFT_ASSIGN", 
                      "URSHIFT_ASSIGN", "LBRACE", "RBRACE", "LPAREN", "RPAREN", 
                      "LBRACK", "RBRACK", "COMMA", "SEMI", "QUESTION", "COLON", 
                      "ELLIPSIS", "AT", "IDENTIFIER", "DecimalIntegerLiteral", 
                      "FloatingPointLiteral", "StringLiteral", "CharacterLiteral", 
                      "WS", "COMMENT", "LINE_COMMENT" ]

    RULE_compilationUnit = 0
    RULE_packageDeclaration = 1
    RULE_importDeclaration = 2
    RULE_qualifiedName = 3
    RULE_typeDeclaration = 4
    RULE_classDeclaration = 5
    RULE_interfaceDeclaration = 6
    RULE_implementsClause = 7
    RULE_interfaceMemberDeclaration = 8
    RULE_interfaceMethodDeclaration = 9
    RULE_enumDeclaration = 10
    RULE_enumConstantList = 11
    RULE_enumConstant = 12
    RULE_enumBodyDeclarations = 13
    RULE_typeParameters = 14
    RULE_typeParameter = 15
    RULE_typeBound = 16
    RULE_memberDeclaration = 17
    RULE_fieldDeclaration = 18
    RULE_variableDeclarator = 19
    RULE_variableInitializer = 20
    RULE_constructorDeclaration = 21
    RULE_methodDeclaration = 22
    RULE_modifier = 23
    RULE_returnType = 24
    RULE_type = 25
    RULE_classOrInterfaceType = 26
    RULE_primitiveType = 27
    RULE_typeArguments = 28
    RULE_typeArgument = 29
    RULE_typeList = 30
    RULE_annotation = 31
    RULE_elementValuePairList = 32
    RULE_elementValuePair = 33
    RULE_elementValue = 34
    RULE_elementValueArrayInitializer = 35
    RULE_formalParameters = 36
    RULE_formalParameter = 37
    RULE_variableDeclaratorId = 38
    RULE_qualifiedNameList = 39
    RULE_block = 40
    RULE_blockStatement = 41
    RULE_statement = 42
    RULE_switchStatement = 43
    RULE_switchBlockStatementGroup = 44
    RULE_switchLabel = 45
    RULE_constantExpression = 46
    RULE_enumConstantName = 47
    RULE_breakStatement = 48
    RULE_continueStatement = 49
    RULE_doWhileStatement = 50
    RULE_throwStatement = 51
    RULE_synchronizedStatement = 52
    RULE_localVariableDeclarationStatement = 53
    RULE_ifStatement = 54
    RULE_whileStatement = 55
    RULE_forStatement = 56
    RULE_forControl = 57
    RULE_enhancedForControl = 58
    RULE_basicForControl = 59
    RULE_forInit = 60
    RULE_forUpdate = 61
    RULE_tryStatement = 62
    RULE_catchClause = 63
    RULE_returnStatement = 64
    RULE_expressionStatement = 65
    RULE_expression = 66
    RULE_creator = 67
    RULE_createdName = 68
    RULE_typeArgumentsOrDiamond = 69
    RULE_arrayCreatorRest = 70
    RULE_classCreatorRest = 71
    RULE_arguments = 72
    RULE_classBody = 73
    RULE_expressionList = 74
    RULE_lambdaExpression = 75
    RULE_superSuffix = 76
    RULE_primary = 77
    RULE_literal = 78
    RULE_arrayInitializer = 79

    ruleNames =  [ "compilationUnit", "packageDeclaration", "importDeclaration", 
                   "qualifiedName", "typeDeclaration", "classDeclaration", 
                   "interfaceDeclaration", "implementsClause", "interfaceMemberDeclaration", 
                   "interfaceMethodDeclaration", "enumDeclaration", "enumConstantList", 
                   "enumConstant", "enumBodyDeclarations", "typeParameters", 
                   "typeParameter", "typeBound", "memberDeclaration", "fieldDeclaration", 
                   "variableDeclarator", "variableInitializer", "constructorDeclaration", 
                   "methodDeclaration", "modifier", "returnType", "type", 
                   "classOrInterfaceType", "primitiveType", "typeArguments", 
                   "typeArgument", "typeList", "annotation", "elementValuePairList", 
                   "elementValuePair", "elementValue", "elementValueArrayInitializer", 
                   "formalParameters", "formalParameter", "variableDeclaratorId", 
                   "qualifiedNameList", "block", "blockStatement", "statement", 
                   "switchStatement", "switchBlockStatementGroup", "switchLabel", 
                   "constantExpression", "enumConstantName", "breakStatement", 
                   "continueStatement", "doWhileStatement", "throwStatement", 
                   "synchronizedStatement", "localVariableDeclarationStatement", 
                   "ifStatement", "whileStatement", "forStatement", "forControl", 
                   "enhancedForControl", "basicForControl", "forInit", "forUpdate", 
                   "tryStatement", "catchClause", "returnStatement", "expressionStatement", 
                   "expression", "creator", "createdName", "typeArgumentsOrDiamond", 
                   "arrayCreatorRest", "classCreatorRest", "arguments", 
                   "classBody", "expressionList", "lambdaExpression", "superSuffix", 
                   "primary", "literal", "arrayInitializer" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    IMPORT=6
    PACKAGE=7
    CLASS=8
    INTERFACE=9
    IMPLEMENTS=10
    PUBLIC=11
    ENUM=12
    PRIVATE=13
    PROTECTED=14
    STATIC=15
    FINAL=16
    ABSTRACT=17
    SYNCHRONIZED=18
    NATIVE=19
    STRICTFP=20
    VOID=21
    BOOLEAN=22
    CHAR=23
    BYTE=24
    SHORT=25
    INT=26
    LONG=27
    FLOAT=28
    DOUBLE=29
    IF=30
    ELSE=31
    WHILE=32
    FOR=33
    RETURN=34
    TRUE=35
    FALSE=36
    NULL=37
    SWITCH=38
    CASE=39
    DEFAULT=40
    BREAK=41
    CONTINUE=42
    DO=43
    THROW=44
    THROWS=45
    ASSERT=46
    NEW=47
    INSTANCEOF=48
    THIS=49
    SUPER=50
    PLUS=51
    MINUS=52
    MULT=53
    DIV=54
    MOD=55
    EQUAL=56
    NOTEQUAL=57
    LT=58
    GT=59
    LE=60
    GE=61
    ASSIGN=62
    DOT=63
    AND=64
    OR=65
    INC=66
    DEC=67
    BITAND=68
    BITOR=69
    CARET=70
    TILDE=71
    BANG=72
    ADD_ASSIGN=73
    SUB_ASSIGN=74
    MUL_ASSIGN=75
    DIV_ASSIGN=76
    MOD_ASSIGN=77
    AND_ASSIGN=78
    OR_ASSIGN=79
    XOR_ASSIGN=80
    LSHIFT_ASSIGN=81
    RSHIFT_ASSIGN=82
    URSHIFT_ASSIGN=83
    LBRACE=84
    RBRACE=85
    LPAREN=86
    RPAREN=87
    LBRACK=88
    RBRACK=89
    COMMA=90
    SEMI=91
    QUESTION=92
    COLON=93
    ELLIPSIS=94
    AT=95
    IDENTIFIER=96
    DecimalIntegerLiteral=97
    FloatingPointLiteral=98
    StringLiteral=99
    CharacterLiteral=100
    WS=101
    COMMENT=102
    LINE_COMMENT=103

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CompilationUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SimpleJavaParser.EOF, 0)

        def packageDeclaration(self):
            return self.getTypedRuleContext(SimpleJavaParser.PackageDeclarationContext,0)


        def importDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleJavaParser.ImportDeclarationContext)
            else:
                return self.getTypedRuleContext(SimpleJavaParser.ImportDeclarationContext,i)


        def typeDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleJavaParser.TypeDeclarationContext)
            else:
                return self.getTypedRuleContext(SimpleJavaParser.TypeDeclarationContext,i)


        def getRuleIndex(self):
            return SimpleJavaParser.RULE_compilationUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompilationUnit" ):
                listener.enterCompilationUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompilationUnit" ):
                listener.exitCompilationUnit(self)




    def compilationUnit(self):

        localctx = SimpleJavaParser.CompilationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 160
                self.packageDeclaration()


            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 163
                self.importDeclaration()
                self.state = 168
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 170 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 169
                self.typeDeclaration()
                self.state = 172 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 2095872) != 0) or _la==95):
                    break

            self.state = 174
            self.match(SimpleJavaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PackageDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PACKAGE(self):
            return self.getToken(SimpleJavaParser.PACKAGE, 0)

        def qualifiedName(self):
            return self.getTypedRuleContext(SimpleJavaParser.QualifiedNameContext,0)


        def SEMI(self):
            return self.getToken(SimpleJavaParser.SEMI, 0)

        def getRuleIndex(self):
            return SimpleJavaParser.RULE_packageDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackageDeclaration" ):
                listener.enterPackageDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackageDeclaration" ):
                listener.exitPackageDeclaration(self)




    def packageDeclaration(self):

        localctx = SimpleJavaParser.PackageDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_packageDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.match(SimpleJavaParser.PACKAGE)
            self.state = 177
            self.qualifiedName()
            self.state = 178
            self.match(SimpleJavaParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(SimpleJavaParser.IMPORT, 0)

        def qualifiedName(self):
            return self.getTypedRuleContext(SimpleJavaParser.QualifiedNameContext,0)


        def SEMI(self):
            return self.getToken(SimpleJavaParser.SEMI, 0)

        def DOT(self):
            return self.getToken(SimpleJavaParser.DOT, 0)

        def MULT(self):
            return self.getToken(SimpleJavaParser.MULT, 0)

        def getRuleIndex(self):
            return SimpleJavaParser.RULE_importDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportDeclaration" ):
                listener.enterImportDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportDeclaration" ):
                listener.exitImportDeclaration(self)




    def importDeclaration(self):

        localctx = SimpleJavaParser.ImportDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_importDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.match(SimpleJavaParser.IMPORT)
            self.state = 181
            self.qualifiedName()
            self.state = 184
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==63:
                self.state = 182
                self.match(SimpleJavaParser.DOT)
                self.state = 183
                self.match(SimpleJavaParser.MULT)


            self.state = 186
            self.match(SimpleJavaParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QualifiedNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleJavaParser.IDENTIFIER)
            else:
                return self.getToken(SimpleJavaParser.IDENTIFIER, i)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleJavaParser.DOT)
            else:
                return self.getToken(SimpleJavaParser.DOT, i)

        def getRuleIndex(self):
            return SimpleJavaParser.RULE_qualifiedName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQualifiedName" ):
                listener.enterQualifiedName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQualifiedName" ):
                listener.exitQualifiedName(self)




    def qualifiedName(self):

        localctx = SimpleJavaParser.QualifiedNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_qualifiedName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self.match(SimpleJavaParser.IDENTIFIER)
            self.state = 193
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 189
                    self.match(SimpleJavaParser.DOT)
                    self.state = 190
                    self.match(SimpleJavaParser.IDENTIFIER) 
                self.state = 195
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDeclaration(self):
            return self.getTypedRuleContext(SimpleJavaParser.ClassDeclarationContext,0)


        def enumDeclaration(self):
            return self.getTypedRuleContext(SimpleJavaParser.EnumDeclarationContext,0)


        def interfaceDeclaration(self):
            return self.getTypedRuleContext(SimpleJavaParser.InterfaceDeclarationContext,0)


        def getRuleIndex(self):
            return SimpleJavaParser.RULE_typeDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeDeclaration" ):
                listener.enterTypeDeclaration(self)
